<resources>
    <string name="app_name">Trivia Trivial</string>
    <string name="hello_player">Bienvenido</string>

    <string name="input_name_hint">Ingrese su nombre de participante</string>
    <string name="opcion1_quest1">1 triagulo</string>
    <string name="opcion2_quest1">5 triangulos</string>
    <string name="opcion3_quest1">8 triangulos</string>
    <string name="opcion4_quest1">4 triangulos</string>
    <string name="quest1">¿cuantos triangulos ves?</string>
    <string name="good_answer">Respuesta correcta</string>
    <string name="bad_answer">Respuesta incorrecta</string>
    <string name="reload">Volver a intentar</string>
    <string name="finish">Finalizar</string>


</resources>